// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render summary for multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      You are viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $30.00
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should correctly render summary for one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      You are viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        $120.00
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
